WexGit/Wex_DX/force-app/main/default/objects/AgentWork/fields/Handle_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_Minutes__c</fullName>
    <formula>TEXT(Floor(HandleTime/60)) &amp; &apos; min&apos; &amp; &apos; : &apos; &amp; TEXT(MOD(HandleTime, 60)) &amp; &apos; sec&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time Minutes</label>
    <type>Text</type>
</CustomField>