WexGit/Wex_DX/force-app/main/default/objects/AgentWork/fields/Requested_Outside_of_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Requested_Outside_of_Business_Hours__c</fullName>
    <formula>OR( 
AND( 
MOD(DATEVALUE(RequestDateTime) - DATE(2000, 1, 1), 7) = 0, 
Requested_Hour__c &lt; 5 
), 
AND( 
MOD(DATEVALUE(RequestDateTime) - DATE(2000, 1, 1), 7) = 1, 
OR( 
Requested_Hour__c &lt; 6, 
Requested_Hour__c &gt; 17 
) 
), 
AND( 
MOD(DATEVALUE(RequestDateTime) - DATE(2000, 1, 1), 7) &gt; 2, 
OR( 
Requested_Hour__c &lt; 7, 
Requested_Hour__c &gt; 17 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Outside of Business Hours</label>
    <type>Checkbox</type>
</CustomField>